# computer-algebra

./: CMakeLists.txt
Anenkov_Ivan/: natural_number.cpp  natural_number.h  processing_input.h
Anenkov_Ivan/core/: processing_input.cpp
computer-algebra/: CMakeLists.txt
computer-algebra/src/core/: processing_input.cpp  processing_input.h
computer-algebra/src/model/: integer_numbers.cpp  integer_numbers.h  natural_number.cpp  natural_number.h  number.h  polynomial.h  rational_numbers.cpp  rational_numbers.h
computer-algebra/tests/: core_test.cpp  natural_number_test.cpp
src/core/: processing_input.cpp  processing_input.h
src/gui/: fraction_input.cpp  fraction_input.h  integer_number_window.cpp  integer_number_window.h  main.cpp  main_window.cpp  main_window.h  natural_number_window.cpp  natural_number_window.h  polynomial_input.cpp  polynomial_input.h  polynomial_window.cpp  polynomial_window.h  rational_number_window.cpp  rational_number_window.h
src/model/: integer_numbers.cpp  integer_numbers.h  natural_number.cpp  natural_number.h  number.h  polynomial.cpp  polynomial.h  rational_numbers.cpp  rational_numbers.h
tests/: core_test.cpp  integer_number_test.cpp  natural_number_test.cpp  polynomial_test.cpp  rational_numbers_test.cpp
